demo/backend2.yaml
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend2
  template:
    metadata:
      labels:
        app: backend2
    spec:
      containers:
        - name: backend2
          image: fittdev/fd:k8s-backend2-1.0.0
          ports:
            - containerPort: 3001
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: backend2-service
spec:
  selector:
    app: backend2
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
